# wedding

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.override.yml  docker-compose.yml  render.yaml  rust-toolchain.toml
bins/api/: Cargo.toml  Dockerfile  askama.toml
bins/api/src/: config.rs  context.rs  main.rs  request_context.rs
bins/api/src/routes/: index.rs  mod.rs
bins/api/src/routes/guests/: create.rs  list.rs
bins/api/src/routes/rsvps/: create.rs
bins/api/src/routes/web/: contact.rs  mod.rs  schedule.rs  story.rs  travel.rs  venue.rs  welcome.rs
bins/api/templates/: base.html  contact.html  schedule.html  story.html  travel.html  venue.html  welcome.html  welcome_details.html
bins/api/templates/index/: page.html
book/: book.toml
book/src/: 00-introduction.md  SUMMARY.md
book/src/01-venues/: 01-villa-di-maiano.md  02-villa-grabau.md  03-villa-corsini-a-mezzomonte.md  04-tenuta-corbinaia.md  README.md  (+12 more)
crates/storage/: Cargo.toml
crates/storage/migrations/: 001_create_guests.sql  002_create_rsvps.sql
crates/storage/src/: guest.rs  lib.rs  rsvp.rs
crates/storage/src/types/: guest.rs  mod.rs  rsvp.rs
venues/: 01-villa-di-maiano.md  02-villa-grabau.md  03-villa-corsini-a-mezzomonte.md  04-tenuta-corbinaia.md  05-villa-le-fontanelle.md  06-villa-scorzi.md  07-lupaia.md  08-antica-fattoria-di-paterno.md  09-locanda-in-tuscany.md  10-borgo-santambrogio.md  11-castello-di-petrata.md  12-abbazia-di-san-pietro-in-valle.md  13-borgo-castello-panicaglia.md  14-fattoria-di-corniola.md  15-nikis-resort.md  16-vocabolo-moscatelli.md
