[package]
name = "storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
uuid     = { version = "1", features = ["v4", "serde"] }
chrono   = { version = "0.4", features = ["serde"] }
serde    = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx     = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono", "json"] }
